stylesheet.css
body {
    background-color: rgb(244 244 244);
}

img {
    width: 33.33%;
    height: 20dvh;
    float: inline-start;
    vertical-align: top;
    object-fit: fill;
}

#top-images {
    height: 20vh;
    outline: 10px inset darkgreen;
    border: 10px double rgb(167, 96, 11);
    background-color: darkgray;
}

h2 {
    text-align: center;
    color: black;
    font-size: 36px;
}

.div-class {
    border: 10px inset rgb(167, 96, 11);
    height: 50dvh;
    width: 30%;
    margin-top: 4.25vh;
    margin-left: 2.25vw;
    float: inline-start;
    vertical-align: middle;
    background-color: rgb(160, 160, 160);
    overflow-y: auto;
    overflow-x: hidden;
}

#middle-paragraph {
    color: darkred;
    position: relative;
    width: 50%;
    left: 25%;
    font-size: 24px;
}

.p-class {
    font-size: 24px;
    line-height: 36px;
    margin-left: 5px;
    margin-top: 40px;
}

